Add Checkstyle and PiTest